--- a/P001816.opf/layers/v001/Pagination.yml
+++ b/P001816.opf/layers/v001/Pagination.yml
@@ -1,5 +1,5 @@
 id: 6cd52727d0b54d66a08ede7430c2a9e7
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   ef36e69641de4e9aab25e72ba12aef83:
