--- a/P001816.opf/meta.yml
+++ b/P001816.opf/meta.yml
@@ -1,7 +1,7 @@
 id: P001816
 initial_creation_type: ocr
 created_at: 30/03/2020
-last_modified_at: 24/11/2021
+last_modified_at: 2021-12-17 10:23:13.725973
 source_metadata:
   id: bdr:W21686
   title: གཅུང་དོན་ཡོད་དང་དོན་གྲུབ་ཀྱི་རྣམ་ཐར་དད་པའི་པདྨོ་འཛུམ་པའི་ཉིན་བྱེད།
@@ -13,3 +13,5 @@ source_metadata:
       volume_number: 1
       total_pages: 110
       base_file: v001.txt
+  access: http://purl.bdrc.io/admindata/AccessOpen
+  restrictedInChina: false
